fix: fix sidebar content overflow

--- a/src/theme/DocPage/Layout/styles.module.scss
+++ b/src/theme/DocPage/Layout/styles.module.scss
@@ -11,6 +11,10 @@
 
   & > aside {
     max-width: var(--doc-sidebar-max-width);
+
+    & > div {
+      width: 100%;
+    }
   }
 }
 
